# vulkan-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  debug.sh  prepare.sh  run
src/: CMakeLists.txt  array.c  array.h  common.h  fileutil.c  fileutil.h  freecam.c  input.c  main.c  res.c  res.h  term.c  term.h
src/engine/: CMakeLists.txt  array.h  common.h  engine.c  engine.h  m_vec3.h  ppm.c  ppm.h  res.c  res.h
src/engine/event/: event.c  event.h
src/engine/gfx/: camera.h  gfx.c  gfx.h  gfx_types.h  vk_device.c  vk_instance.c  vk_instance.h  vk_swapchain.c  vk_swapchain.h  vk_util.c  vk_util.h  vma.cpp
src/engine/gfx/teapot/: teapot.c  teapot.h
src/engine/gfx/text/: text.c  text.h  vk_text.c  vk_text.h
src/engine/handle/: handle.c  handle.h
src/engine/log/: log.c  log.h
src/engine/mem/: arr.h  mem.c  mem.h  sysmem.c
src/engine/res/: res.c  res.h
src/engine/sphere/: icosahedron.c  icosahedron.h  icosphere.c  icosphere.h  sphere_renderer.c  sphere_renderer.h
src/engine/text/: README.md  text.h  text_block.c  text_block.h  text_common.h  text_engine.c  text_engine.h  text_geometry.c  text_geometry.h  text_renderer.c  text_renderer.h
src/engine/util/: file.c  file.h  ppm.c
src/engine/widget/: widget.c  widget.h  widget_renderer.c  widget_renderer.h
src/engine/win/: win.c  win.h
src/game/: CMakeLists.txt  freecam.c  freecam.h  input.c  input.h  main.c  term.c  term.h
src/game/softbody/: phash.c  phash.h  sbm.c  sbm.h  softbody.c  softbody.h  softbody_renderer.c  softbody_renderer.h  wireframe_renderer.c  wireframe_renderer.h
src/game/teapot/: teapot.c
src/gfx/: gfx.c  gfx.h  gfx_types.h  text.c  vk_device.c  vk_device.h  vk_instance.c  vk_pipeline.c  vk_swapchain.c  vk_util.c  vk_util.h
src/glsl/: softbody.frag  softbody.shadow.vert  softbody.vert  sphere.frag  sphere.vert  text.frag  text.vert  tri.frag  tri.vert  widget.frag  widget.vert  wireframe.frag  wireframe.vert
src/teapot/: teapot.c
src/tests/: CMakeLists.txt  testarray.c
